<resources>
    <string name="app_name">Power</string>
    <string name="title_home">主页</string>
    <string name="title_training">训练</string>
    <string name="title_diet">饮食</string>
    <string name="title_training_log">训练日志</string>

    <string name="title_training_program">训练方案</string>
    <string name="title_modify_tp">修改训练方案</string>
    <string name="modification">修改</string>
    <string name="note">说明</string>
    <string name="training_title">训练标题</string>
    <string name="training_day_title">训练日标题</string>
    <string name="training_goal">训练目标</string>
    <string name="cant_delete_last_training_day">不能删除最后一个训练日</string>

    <string name="title_training_today">今日训练</string>
    <string name="text_start_training">开始今日的训练</string>

    <string name="title_exercise_library">动作库</string>

    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
